Remoção de verificação de nulos inuteis