@@ -19,7 +19,6 @@ import sgc.organizacao.UnidadeFacade;
 import sgc.organizacao.dto.UnidadeDto;
 import sgc.organizacao.model.Perfil;
 import sgc.organizacao.model.Unidade;
-import sgc.painel.erros.ErroParametroPainelInvalido;
 import sgc.processo.dto.ProcessoResumoDto;
 import sgc.processo.model.Processo;
 import sgc.processo.model.SituacaoProcesso;
@@ -33,7 +32,6 @@ import java.util.Optional;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
@@ -58,13 +56,7 @@ class PainelServiceTest {
     @DisplayName("Listar Processos - Consultas Básicas")
     class ListarProcessosBasico {
 
-        @Test
-        @DisplayName("listarProcessos deve lançar erro se perfil for nulo")
-        void listarProcessos_PerfilNulo() {
-            Pageable unpaged = Pageable.unpaged();
-            assertThatThrownBy(() -> painelService.listarProcessos(null, 1L, unpaged))
-                    .isInstanceOf(ErroParametroPainelInvalido.class);
-        }
+
 
         @Test
         @DisplayName("listarProcessos para ADMIN deve listar todos")
@@ -92,13 +84,7 @@ class PainelServiceTest {
             verify(processoFacade).listarPorParticipantesIgnorandoCriado(anyList(), any(Pageable.class));
         }
 
-        @Test
-        @DisplayName("listarProcessos não ADMIN retorna vazio se unidade for nula")
-        void listarProcessos_NaoAdminSemUnidade() {
-            Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.CHEFE, null, PageRequest.of(0, 10));
-            assertThat(result).isNotNull();
-            assertThat(result.getContent()).isEmpty();
-        }
+
 
         @Test
         @DisplayName("listarProcessos: Perfil GESTOR deve buscar subordinadas")
@@ -106,11 +92,8 @@ class PainelServiceTest {
             Long codigoUnidade = 1L;
             when(unidadeService.buscarIdsDescendentes(codigoUnidade)).thenReturn(List.of(2L));
 
-            Processo p = new Processo();
-            p.setCodigo(100L);
+            Processo p = criarProcessoMock(100L);
             p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-            p.setTipo(TipoProcesso.MAPEAMENTO);
-            p.setParticipantes(Set.of());
 
             when(processoFacade.listarPorParticipantesIgnorandoCriado(anyList(), any())).thenReturn(new PageImpl<>(List.of(p)));
 
@@ -118,17 +101,9 @@ class PainelServiceTest {
 
             assertThat(result.getContent()).isNotEmpty();
             verify(unidadeService).buscarIdsDescendentes(codigoUnidade);
-            verify(processoFacade).listarPorParticipantesIgnorandoCriado(
-                    argThat(list -> list.contains(1L) && list.contains(2L)), any());
         }
 
-        @Test
-        @DisplayName("Deve retornar vazio se codigoUnidade nulo para não-ADMIN")
-        void vazioSeUnidadeNula() {
-            Page<ProcessoResumoDto> res = painelService.listarProcessos(Perfil.SERVIDOR, null, PageRequest.of(0, 10));
-            assertThat(res).isNotNull();
-            assertThat(res.getContent()).isEmpty();
-        }
+
     }
 
     @Nested
@@ -174,11 +149,8 @@ class PainelServiceTest {
             UnidadeDto unidadeDto = UnidadeDto.builder().sigla("SIGLA").build();
             when(unidadeService.buscarPorCodigo(codigoUnidade)).thenReturn(unidadeDto);
 
-            Processo p = new Processo();
-            p.setCodigo(100L);
+            Processo p = criarProcessoMock(100L);
             p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-            p.setTipo(TipoProcesso.MAPEAMENTO);
-            p.setParticipantes(Set.of());
 
             when(processoFacade.listarPorParticipantesIgnorandoCriado(anyList(), any())).thenReturn(new PageImpl<>(List.of(p)));
 
@@ -188,7 +160,7 @@ class PainelServiceTest {
         }
 
         @Test
-        @DisplayName("listarProcessos deve retornar link null se unidade nao encontrada no calculo de link CHEFE")
+        @DisplayName("listarProcessos deve retornar link padrão se unidade nao encontrada no calculo de link CHEFE")
         void listarProcessos_LinkChefeErro() {
             Processo p = criarProcessoMock(1L);
             when(processoFacade.listarPorParticipantesIgnorandoCriado(anyList(), any(Pageable.class)))
@@ -198,35 +170,30 @@ class PainelServiceTest {
 
             Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.CHEFE, 2L, PageRequest.of(0, 10));
 
-            assertThat(result.getContent().get(0).linkDestino()).isNull();
+            assertThat(result.getContent().get(0).linkDestino()).isEqualTo("/processo/1");
         }
 
         @Test
-        @DisplayName("listarProcessos: Link destino nulo se unidade não encontrada para Chefe")
-        void listarProcessos_LinkNuloSeUnidadeNaoEncontrada() {
+        @DisplayName("listarProcessos: Link destino padrão se unidade não encontrada para Chefe")
+        void listarProcessos_LinkPadraoSeUnidadeNaoEncontrada() {
             Long codigoUnidade = 1L;
             when(unidadeService.buscarPorCodigo(codigoUnidade)).thenThrow(new RuntimeException("Erro"));
 
-            Processo p = new Processo();
-            p.setCodigo(100L);
+            Processo p = criarProcessoMock(100L);
             p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-            p.setTipo(TipoProcesso.MAPEAMENTO);
 
             when(processoFacade.listarPorParticipantesIgnorandoCriado(anyList(), any())).thenReturn(new PageImpl<>(List.of(p)));
 
             Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.CHEFE, codigoUnidade, pageable);
 
-            assertThat(result.getContent().get(0).linkDestino()).isNull();
+            assertThat(result.getContent().get(0).linkDestino()).isEqualTo("/processo/100");
         }
 
         @Test
         @DisplayName("Calcula link destino com exceção na busca de unidade")
         void calculaLinkComExcecaoUnidade() {
-            Processo p = new Processo();
-            p.setCodigo(1L);
-            p.setTipo(TipoProcesso.MAPEAMENTO);
+            Processo p = criarProcessoMock(1L);
             p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-            p.setParticipantes(Collections.emptySet());
 
             when(processoFacade.listarPorParticipantesIgnorandoCriado(any(), any()))
                 .thenReturn(new PageImpl<>(List.of(p)));
@@ -237,21 +204,19 @@ class PainelServiceTest {
             Page<ProcessoResumoDto> res = painelService.listarProcessos(Perfil.SERVIDOR, 1L, PageRequest.of(0, 10));
 
             assertThat(res.getContent()).hasSize(1);
-            assertThat(res.getContent().get(0).linkDestino()).isNull();
+            assertThat(res.getContent().get(0).linkDestino()).isEqualTo("/processo/1");
         }
 
         @Test
         @DisplayName("calcularLinkDestinoProcesso deve retornar link padrão")
         void calcularLinkDestinoProcesso_Default() {
-            // Linha 240
             Processo p = criarProcessoMock(1L);
-            // CHEFE com codigoUnidade não nulo que falha na busca
             when(processoFacade.listarPorParticipantesIgnorandoCriado(anyList(), any())).thenReturn(new PageImpl<>(List.of(p)));
             when(unidadeService.buscarPorCodigo(999L)).thenThrow(new RuntimeException("Error"));
             
             Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.CHEFE, 999L, PageRequest.of(0, 10));
             assertThat(result.getContent()).isNotEmpty();
-            assertThat(result.getContent().get(0).linkDestino()).isNull(); // Cai no catch do calcularLinkDestinoProcesso
+            assertThat(result.getContent().get(0).linkDestino()).isEqualTo("/processo/1");
         }
     }
 
@@ -277,30 +242,32 @@ class PainelServiceTest {
         }
 
         @Test
-        @DisplayName("paraProcessoResumoDto deve lidar com participantes nulos ou vazios")
-        void paraProcessoResumoDto_ParticipantesVazios() {
-            Processo p = criarProcessoMock(1L);
-            p.setParticipantes(null); // Caso nulo
-            
-            when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
-            
-            Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.ADMIN, null, PageRequest.of(0, 10));
-            assertThat(result.getContent().get(0).unidadeCodigo()).isNull();
-            assertThat(result.getContent().get(0).unidadesParticipantes()).isEmpty();
-        }
-
-        @Test
-        @DisplayName("encontrarMaiorIdVisivel deve retornar null se unidade for null ou não participante")
-        void encontrarMaiorIdVisivel_CasosBorda() {
+        @DisplayName("paraProcessoResumoDto deve usar primeiro participante")
+        void paraProcessoResumoDto_UsaParticipante() {
             Unidade u = new Unidade();
-            u.setCodigo(999L);
-            
+            u.setCodigo(1L);
+            u.setNome("U1");
+            u.setSigla("U1");
             Processo p = criarProcessoMock(1L);
             p.setParticipantes(Set.of(u));
             
             when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
-            // Usamos lenient para atingir indiretamente o fluxo de segurança/null checks se houver
-            lenient().when(unidadeService.buscarEntidadePorId(999L)).thenReturn(null);
+            
+            Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.ADMIN, null, PageRequest.of(0, 10));
+            assertThat(result.getContent().get(0).unidadeCodigo()).isEqualTo(1L);
+            assertThat(result.getContent().get(0).unidadesParticipantes()).contains("U1");
+        }
+
+        @Test
+        @DisplayName("encontrarMaiorIdVisivel deve retornar null se unidade não for participante")
+        void encontrarMaiorIdVisivel_NaoParticipante() {
+            Unidade u = new Unidade();
+            u.setCodigo(999L);
+            
+            Processo p = criarProcessoMock(1L);
+            p.setParticipantes(Set.of(new Unidade())); // Outra unidade
+            
+            when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
 
             Page<ProcessoResumoDto> result = painelService.listarProcessos(Perfil.ADMIN, null, PageRequest.of(0, 10));
             assertThat(result.getContent()).isNotEmpty();
@@ -317,10 +284,7 @@ class PainelServiceTest {
             when(unidadeService.buscarIdsDescendentes(1L)).thenReturn(List.of(2L));
             when(unidadeService.buscarIdsDescendentes(2L)).thenReturn(Collections.emptyList());
 
-            Processo p = new Processo();
-            p.setCodigo(100L);
-            p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-            p.setTipo(TipoProcesso.MAPEAMENTO);
+            Processo p = criarProcessoMock(100L);
             p.setParticipantes(Set.of(pai, filho));
 
             when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
@@ -337,10 +301,7 @@ class PainelServiceTest {
             Unidade filho = new Unidade(); filho.setCodigo(2L); filho.setSigla("FILHO");
             filho.setUnidadeSuperior(pai);
 
-            Processo p = new Processo();
-            p.setCodigo(100L);
-            p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-            p.setTipo(TipoProcesso.MAPEAMENTO);
+            Processo p = criarProcessoMock(100L);
             p.setParticipantes(Set.of(filho));
 
             when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
@@ -357,10 +318,8 @@ class PainelServiceTest {
             part.setCodigo(99L);
             part.setSigla("U99");
 
-            Processo p = new Processo();
-            p.setCodigo(1L);
+            Processo p = criarProcessoMock(1L);
             p.setParticipantes(Set.of(part));
-            p.setTipo(TipoProcesso.MAPEAMENTO);
 
             when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
 
@@ -431,6 +390,7 @@ class PainelServiceTest {
             alerta.setCodigo(100L);
             alerta.setDescricao("Alerta teste");
             alerta.setDataHora(LocalDateTime.now());
+            alerta.setProcesso(new Processo());
             
             when(alertaService.listarPorUnidade(any(Long.class), any(Pageable.class)))
                     .thenReturn(new PageImpl<>(List.of(alerta)));
@@ -443,13 +403,7 @@ class PainelServiceTest {
             verify(alertaService).listarPorUnidade(any(Long.class), any(Pageable.class));
         }
 
-        @Test
-        @DisplayName("listarAlertas sem unidade deve retornar vazio")
-        void listarAlertas_SemUnidadeRetornaVazio() {
-            Page<AlertaDto> result = painelService.listarAlertas(null, null, PageRequest.of(0, 10));
 
-            assertThat(result).isEmpty();
-        }
 
         @Test
         @DisplayName("listarAlertas deve tratar unidades nulas no DTO")
@@ -458,6 +412,7 @@ class PainelServiceTest {
             alerta.setCodigo(400L);
             alerta.setDescricao("Alerta sem unidade");
             alerta.setDataHora(LocalDateTime.now());
+            alerta.setProcesso(new Processo());
             
             when(alertaService.listarPorUnidade(any(Long.class), any(Pageable.class)))
                     .thenReturn(new PageImpl<>(List.of(alerta)));
@@ -474,6 +429,7 @@ class PainelServiceTest {
             Alerta alerta = new Alerta();
             alerta.setCodigo(500L);
             alerta.setDescricao("D1");
+            alerta.setProcesso(new Processo());
             
             when(alertaService.listarPorUnidade(any(), any())).thenReturn(new PageImpl<>(List.of(alerta)));
             
@@ -492,6 +448,7 @@ class PainelServiceTest {
             Alerta alerta = new Alerta();
             alerta.setUnidadeOrigem(null);
             alerta.setUnidadeDestino(null);
+            alerta.setProcesso(new Processo());
             
             when(alertaService.listarPorUnidade(any(), any())).thenReturn(new PageImpl<>(List.of(alerta)));
             
@@ -508,6 +465,7 @@ class PainelServiceTest {
             Alerta alerta = new Alerta();
             alerta.setCodigo(1L);
             alerta.setDataHora(LocalDateTime.now());
+            alerta.setProcesso(new Processo());
 
             when(alertaService.listarPorUnidade(eq(codigoUnidade), any())).thenReturn(new PageImpl<>(List.of(alerta)));
 
@@ -517,13 +475,7 @@ class PainelServiceTest {
             verify(alertaService).listarPorUnidade(eq(codigoUnidade), any());
         }
 
-        @Test
-        @DisplayName("listarAlertas: retorna vazio se titulo e unidade nulos")
-        void listarAlertas_SemFiltrosRetornaVazio() {
-            Page<AlertaDto> result = painelService.listarAlertas(null, null, pageable);
 
-            assertThat(result).isEmpty();
-        }
     }
 
     private Processo criarProcessoMock(Long codigo) {
@@ -533,7 +485,8 @@ class PainelServiceTest {
         p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
         p.setTipo(TipoProcesso.MAPEAMENTO);
         p.setDataCriacao(LocalDateTime.now());
-        p.setParticipantes(Collections.emptySet());
+        Unidade u = new Unidade(); u.setCodigo(codigo); u.setSigla("U"+codigo);
+        p.setParticipantes(Set.of(u));
         return p;
     }
 }
